wayland: Sync output device's enabled property

The output can be already disabled when the output device is created.

BUG: 460247